removed QuizRef.cs and GameRef.cs in favor of view models * delete game (checks todo) * deleted state instead of actual delete for now * editable game title and code (wip)

--- a/team-frontend/src/locales/en.json
+++ b/team-frontend/src/locales/en.json
@@ -1,111 +1,112 @@
 {
-  "APP_TITLE": "Quizr",
-  "HOME_TITLE": "To the homepage",
-  "MENU_ABOUT": "About",
   "ABOUT_WELCOME": "All about Quizr",
-  "MENU_HELP": "Help",
-  "QUIZMASTER_LOGIN": "Quizmaster / admin login",
+  "ADD_GAME_FOR_QUIZ": "Add game",
+  "ADD_QUIZ": "Add quiz",
+  "ADJUST": "Adjust",
+  "APP_TITLE": "Quizr",
+  "BEAMER_TITLE": "Open beamer view",
+  "CHANGES_SAVED": "Answers automatically saved.",
+  "CODE": "Code",
+  "CODE_LENGTH": "A code consists of at least 4 characters.",
+  "CODE_ORIGIN": "You'll receive the code from your quizmaster.",
+  "COMPETING_TEAMS": "Other teams in the game",
+  "CONFIRM_END_GAME": "Are you sure you want to end the game?",
+  "CONTINUE_GAME": "To the game screen.",
+  "CURRENT_TEAMS_IN_GAME": "Teams in the game:",
+  "CURRENT_TEAMS_IN_LOBBY": "The following teams are waiting in the lobby:",
+  "Closed": "Closed",
+  "DELETE_GAME": "Delete game",
+  "Deleted": "Deleted",
+  "EDIT": "Edit",
+  "EDIT_GAME": "Edit game",
+  "ERROR_MESSAGE_TITLE": "Error",
+  "FINISH_GAME": "End",
+  "FLAGGED": "Flagged for manual correction",
+  "Finished": "Finished",
   "GAME": "game",
   "GAMES": "games",
-  "USERNAME": "Username",
-  "LEAVE_GAME": "Leave game",
-  "SELECT_GAME": "Select game",
-  "YOUR_TEAM": "Your team",
-  "TEAMNAME": "Team name",
-  "TEAM_MEMBERS_HERE": "No team members added yet.",
-  "TEAMNAME_LENGTH": "A team name consists of at least 5 and at most 30 characters.",
-  "USERNAME_LENGTH": "A username consists of at least 5 and at most 30 characters.",
-  "HOME_WELCOME": "Welcome to Quizr!",
+  "GameIsPausedOrFinished": "The game is paused or finished. The thing you're trying to do is not allowed in these states.",
   "HOME_NAVTITLE": "Welcome",
-  "HOME_REGISTERHERE": "Register here",
   "HOME_QUIZMASTERLOGIN": "Quizmaster login",
-  "CODE": "Code",
-  "REGISTER_TEAM": "Register team",
-  "REGISTER": "Register",
-  "KEEP_IT_CLEAN": "Keep it clean!",
-  "CODE_ORIGIN": "You'll receive the code from your quizmaster.",
-  "CODE_LENGTH": "A code consists of at least 4 characters.",
-  "TEAMLOBBY_WELCOME": "Welcome to the lobby!",
-  "TEAMLOBBY_SIT_BACK": "Sit back and relax..",
-  "MEMBERS": "Team members",
-  "MEMBER_NAMES": "Add the members of your team (one per line).",
-  "ADJUST": "Adjust",
-  "SAVE": "Save",
-  "COMPETING_TEAMS": "Other teams in the game",
-  "LOGGED_OUT": "Logged out",
-  "KICKED_OUT": "You've been kicked out by the quizmaster. Click OK to go to the registration page.",
-  "KICK_OUT": "Kick this team out of the game!",
-  "REMOVED": "Removed",
-  "ERROR_MESSAGE_TITLE": "Error",
-  "PASSWORD": "Password",
-  "PASSWORD_LENGTH": "A password consists of at least 2 characters.",
-  "LOGIN": "Log in",
-  "START_GAME": "Start the game.",
-  "CONTINUE_GAME": "To the game screen.",
-  "PAUSE_GAME": "Pause",
-  "RESUME_GAME": "Resume",
-  "FINISH_GAME": "End",
-  "CURRENT_TEAMS_IN_LOBBY": "The following teams are waiting in the lobby:",
-  "CURRENT_TEAMS_IN_GAME": "Teams in the game:",
-  "WELCOME_TO_QUIZMASTER_LOBBY": "Welcome to the lobby",
-  "TEAM_KICKED_OUT": "Team '{teamName}' has been removed.",
-  "PREVIOUS_ITEM": "Previous question",
-  "SKIP_10_BACK": "10",
-  "NEXT_ITEM": "Next question",
-  "SKIP_10_FORWARD": "10",
-  "QUIZ_ITEM": "question",
-  "OF": "of",
-  "Running": "Busy",
-  "Paused": "Paused",
-  "Open": "Open",
-  "Closed": "Closed",
-  "Finished": "Finished",
-  "LOBBY_TITLE": "Back to the lobby",
-  "POINTS": "p",
-  "TOTAL_NUMBER_OF_POINTS": "Total points",
-  "SECTION": "section",
+  "HOME_REGISTERHERE": "Register here",
+  "HOME_TITLE": "To the homepage",
+  "HOME_WELCOME": "Welcome to Quizr!",
   "InvalidCode": "Invalid code",
-  "TeamNameIsTaken": "Name already in use.",
   "InvalidEntityId": "Invalid id.",
-  "QuestionNotInQuiz": "Question not in quiz.",
-  "QuestionNotInCurrentQuizSection": "Question not in current quiz section.",
-  "Ok": "Ok",
   "InvalidGameStateTransition": "Invalid game status transition.",
   "InvalidUserNameOrPassword": "Invalid username or password.",
-  "QuizMasterUnauthorizedForGame": "As a quizmaster you're not authorized for this game.",
-  "QuizMasterUnauthorizedForQuizItem": "As a quizmaster you're not authorized for this quiz item.",
+  "KEEP_IT_CLEAN": "Keep it clean!",
+  "KICKED_OUT": "You've been kicked out by the quizmaster. Click OK to go to the registration page.",
+  "KICK_OUT": "Kick this team out of the game!",
+  "LEAVE_GAME": "Leave game",
+  "LOBBY_TITLE": "Back to the lobby",
+  "LOGGED_OUT": "Logged out",
+  "LOGIN": "Log in",
   "LobbyUnavailableBecauseOfGameState": "The lobby is not available now.",
-  "NoRoleClaimForUser": "No authorization data found.",
-  "UnauthorizedRole": "You are not authorized for this.",
-  "TeamAlreadyLoggedIn": "Team already logged in.",
-  "ValidationError": "A validation error occured.",
-  "GameIsPausedOrFinished": "The game is paused or finished. The thing you're trying to do is not allowed in these states.",
-  "ThatsYou": "Hi!",
   "LoggedOut": "Logged out.",
-  "TeamCantAccessQuizItemOtherThanTheCurrent": "You can only view the current quiz item.",
-  "SET_OUTCOME_CORRECT": "Approve answer",
-  "SET_OUTCOME_INCORRECT": "Reject answer",
-  "NUMBER_OF_CONNECTIONS": "Number of connections",
-  "BEAMER_TITLE": "Open beamer view",
-  "CONFIRM_END_GAME": "Are you sure you want to end the game?",
-  "PLEASE_CONFIRM": "Please confirm",
-  "YES": "Yes",
-  "NO": "No",
-  "THE_GAME_IS_PAUSED": "The game is paused",
-  "WAIT_FOR_RESUME": "Wait for the game to be resumed",
-  "EDIT": "Edit",
-  "CHANGES_SAVED": "Answers automatically saved.",
-  "REVIEWING": "Reviewing",
-  "REVIEW_CURRENT_SECTION": "Review section",
-  "OPEN_GAME": "Open",
-  "ADD_GAME_FOR_QUIZ": "Add game",
+  "MEMBERS": "Team members",
+  "MEMBER_NAMES": "Add the members of your team (one per line).",
+  "MENU_ABOUT": "About",
+  "MENU_HELP": "Help",
   "MY_GAMES": "My games",
   "MY_QUIZZES": "My quizzes",
-  "UPLOAD_QUIZ": "Upload quiz",
-  "ADD_QUIZ": "Add quiz",
-  "EDIT_GAME": "Edit game",
-  "DELETE_GAME": "Delete game",
-  "TEAM_OFFLINE": "Team is offline",
+  "NEXT_ITEM": "Next question",
+  "NO": "No",
+  "NUMBER_OF_CONNECTIONS": "Number of connections",
+  "NoRoleClaimForUser": "No authorization data found.",
+  "OF": "of",
+  "OPEN_GAME": "Open",
   "OTHER_GAMES": "Other games",
-  "FLAGGED": "Flagged for manual correction"
+  "Ok": "Ok",
+  "Open": "Open",
+  "PASSWORD": "Password",
+  "PASSWORD_LENGTH": "A password consists of at least 2 characters.",
+  "PAUSE_GAME": "Pause",
+  "PLEASE_CONFIRM": "Please confirm",
+  "POINTS": "p",
+  "PREVIOUS_ITEM": "Previous question",
+  "Paused": "Paused",
+  "QUIZMASTER_LOGIN": "Quizmaster / admin login",
+  "QUIZ_ITEM": "question",
+  "QuestionNotInCurrentQuizSection": "Question not in current quiz section.",
+  "QuestionNotInQuiz": "Question not in quiz.",
+  "QuizMasterUnauthorizedForGame": "As a quizmaster you're not authorized for this game.",
+  "QuizMasterUnauthorizedForQuizItem": "As a quizmaster you're not authorized for this quiz item.",
+  "REGISTER": "Register",
+  "REGISTER_TEAM": "Register team",
+  "REMOVED": "Removed",
+  "RESUME_GAME": "Resume",
+  "REVIEWING": "Reviewing",
+  "REVIEW_CURRENT_SECTION": "Review section",
+  "Running": "Busy",
+  "SAVE": "Save",
+  "SECTION": "section",
+  "SELECT_GAME": "Set game as active",
+  "SET_OUTCOME_CORRECT": "Approve answer",
+  "SET_OUTCOME_INCORRECT": "Reject answer",
+  "SKIP_10_BACK": "10",
+  "SKIP_10_FORWARD": "10",
+  "START_GAME": "Start the game.",
+  "TEAMLOBBY_SIT_BACK": "Sit back and relax..",
+  "TEAMLOBBY_WELCOME": "Welcome to the lobby!",
+  "TEAMNAME": "Team name",
+  "TEAMNAME_LENGTH": "A team name consists of at least 5 and at most 30 characters.",
+  "TEAM_KICKED_OUT": "Team '{teamName}' has been removed.",
+  "TEAM_MEMBERS_HERE": "No team members added yet.",
+  "TEAM_OFFLINE": "Team is offline",
+  "THE_GAME_IS_PAUSED": "The game is paused",
+  "TOTAL_NUMBER_OF_POINTS": "Total points",
+  "TeamAlreadyLoggedIn": "Team already logged in.",
+  "TeamCantAccessQuizItemOtherThanTheCurrent": "You can only view the current quiz item.",
+  "TeamNameIsTaken": "Name already in use.",
+  "ThatsYou": "Hi!",
+  "UPLOAD_QUIZ": "Upload quiz",
+  "USERNAME": "Username",
+  "USERNAME_LENGTH": "A username consists of at least 5 and at most 30 characters.",
+  "UnauthorizedRole": "You are not authorized for this.",
+  "ValidationError": "A validation error occured.",
+  "WAIT_FOR_RESUME": "Wait for the game to be resumed",
+  "WELCOME_TO_QUIZMASTER_LOBBY": "Welcome to the lobby",
+  "YES": "Yes",
+  "YOUR_TEAM": "Your team"
 }
