--- a/team-frontend/src/locales/nl.json
+++ b/team-frontend/src/locales/nl.json
@@ -1,111 +1,112 @@
 {
-  "APP_TITLE": "Quizr",
-  "HOME_TITLE": "Naar de voorpagina",
-  "MENU_ABOUT": "Over",
   "ABOUT_WELCOME": "Alles over Quizr",
-  "MENU_HELP": "Help",
-  "QUIZMASTER_LOGIN": "Quizmaster / admin login",
+  "ADD_GAME_FOR_QUIZ": "Spel toevoegen",
+  "ADD_QUIZ": "Quiz toevoegen",
+  "ADJUST": "Aanpassen",
+  "APP_TITLE": "Quizr",
+  "BEAMER_TITLE": "Open het beamerscherm",
+  "CHANGES_SAVED": "Antwoord(en) automatisch opgeslagen.",
+  "CODE": "Code",
+  "CODE_LENGTH": "Een code is minimaal 4 tekens.",
+  "CODE_ORIGIN": "De code krijg je van de quizmaster.",
+  "COMPETING_TEAMS": "Andere teams in het spel",
+  "CONFIRM_END_GAME": "Weet je zeker dat je het spel wilt beëindigen?",
+  "CONTINUE_GAME": "Naar het spelscherm",
+  "CURRENT_TEAMS_IN_GAME": "De volgende teams zitten in het spel:",
+  "CURRENT_TEAMS_IN_LOBBY": "De volgende teams zitten in de teamlobby:",
+  "Closed": "Gesloten",
+  "DELETE_GAME": "Spel verwijderen",
+  "Deleted": "Verwijderd",
+  "EDIT": "Bewerken",
+  "EDIT_GAME": "Spel bewerken",
+  "ERROR_MESSAGE_TITLE": "Fout",
+  "FINISH_GAME": "Einde",
+  "FLAGGED": "Handmatig nakijken nodig",
+  "Finished": "Afgelopen",
   "GAME": "spel",
   "GAMES": "spellen",
-  "USERNAME": "Gebruikersnaam",
-  "LEAVE_GAME": "Spel verlaten",
-  "SELECT_GAME": "Spel selecteren",
-  "YOUR_TEAM": "Jouw team",
-  "TEAMNAME": "Teamnaam",
-  "TEAM_MEMBERS_HERE": "Nog geen teamleden ingevuld.",
-  "TEAMNAME_LENGTH": "Een teamnaam van minimaal 5 en maximaal 30 karakters is verplicht.",
-  "USERNAME_LENGTH": "Een gebruikersnaam van minimaal 5 en maximaal 30 karakters is verplicht.",
-  "HOME_WELCOME": "Welkom bij Quizr!",
+  "GameIsPausedOrFinished": "Het spel is gepauseerd of afgelopen. De actie die je probeert uit te voeren mag nu niet.",
   "HOME_NAVTITLE": "Welkom",
-  "HOME_REGISTERHERE": "Registreer hier",
   "HOME_QUIZMASTERLOGIN": "Quizmaster login",
-  "CODE": "Code",
-  "REGISTER_TEAM": "Team aanmelden",
-  "REGISTER": "Aanmelden",
-  "KEEP_IT_CLEAN": "Houd het netjes!",
-  "CODE_ORIGIN": "De code krijg je van de quizmaster.",
-  "CODE_LENGTH": "Een code is minimaal 4 tekens.",
-  "TEAMLOBBY_WELCOME": "Welkom in de lobby!",
-  "TEAMLOBBY_SIT_BACK": "Zodra iedereen er klaar voor is, wordt je automatisch doorgestuurd naar het spelscherm. Tot die tijd kun je hier je teamnaam aanpassen en je teamleden invullen. Je wijzigingen worden automatisch opgeslagen!",
-  "MEMBERS": "Teamleden",
-  "MEMBER_NAMES": "Geef hier de namen van je teamleden op (één per regel).",
-  "ADJUST": "Aanpassen",
-  "SAVE": "Opslaan",
-  "COMPETING_TEAMS": "Andere teams in het spel",
-  "LOGGED_OUT": "Uitgelogd",
-  "KICKED_OUT": "Jullie zijn verwijderd door de quizmaster. Klik op OK om naar het registratiescherm te gaan.",
-  "KICK_OUT": "Kick dit team uit de game!",
-  "REMOVED": "Verwijderd",
-  "ERROR_MESSAGE_TITLE": "Fout",
-  "PASSWORD": "Wachtwoord",
-  "PASSWORD_LENGTH": "Een wachtwoord is minimaal 2 tekens.",
-  "LOGIN": "Inloggen",
-  "START_GAME": "Spel starten",
-  "CONTINUE_GAME": "Naar het spelscherm",
-  "PAUSE_GAME": "Pauzeren",
-  "RESUME_GAME": "Hervatten",
-  "FINISH_GAME": "Einde",
-  "CURRENT_TEAMS_IN_LOBBY": "De volgende teams zitten in de teamlobby:",
-  "CURRENT_TEAMS_IN_GAME": "De volgende teams zitten in het spel:",
-  "WELCOME_TO_QUIZMASTER_LOBBY": "Welkom in de lobby",
-  "TEAM_KICKED_OUT": "Team '{teamName}' uit het spel verwijderd.",
-  "PREVIOUS_ITEM": "Vorige vraag",
-  "SKIP_10_BACK": "10",
-  "NEXT_ITEM": "Volgende vraag",
-  "SKIP_10_FORWARD": "10",
-  "QUIZ_ITEM": "Vraag",
-  "OF": "van",
-  "Running": "Bezig",
-  "Paused": "Gepauzeerd",
-  "Open": "Open",
-  "Closed": "Gesloten",
-  "Finished": "Afgelopen",
-  "LOBBY_TITLE": "Terug naar de lobby",
-  "POINTS": "p",
-  "TOTAL_NUMBER_OF_POINTS": "Totaal aantal punten",
-  "SECTION": "onderdeel",
+  "HOME_REGISTERHERE": "Registreer hier",
+  "HOME_TITLE": "Naar de voorpagina",
+  "HOME_WELCOME": "Welkom bij Quizr!",
   "InvalidCode": "Ongeldige code",
-  "TeamNameIsTaken": "Teamnaam is al in gebruik.",
   "InvalidEntityId": "Ongeldige id.",
-  "QuestionNotInQuiz": "Onbekende vraag voor deze quiz.",
-  "QuestionNotInCurrentQuizSection": "Onbekende vraag voor huidige quiz sectie.",
-  "Ok": "Ok",
   "InvalidGameStateTransition": "Ongeldige transitie van spelstatus.",
   "InvalidUserNameOrPassword": "Ongeldige gebruikersnaam of wachtwoord.",
-  "QuizMasterUnauthorizedForGame": "U bent hiervoor niet geautoriseerd (game).",
-  "QuizMasterUnauthorizedForQuizItem": "U bent hiervoor niet geautoriseerd (quiz item).",
+  "KEEP_IT_CLEAN": "Houd het netjes!",
+  "KICKED_OUT": "Jullie zijn verwijderd door de quizmaster. Klik op OK om naar het registratiescherm te gaan.",
+  "KICK_OUT": "Kick dit team uit de game!",
+  "LEAVE_GAME": "Spel verlaten",
+  "LOBBY_TITLE": "Terug naar de lobby",
+  "LOGGED_OUT": "Uitgelogd",
+  "LOGIN": "Inloggen",
   "LobbyUnavailableBecauseOfGameState": "De lobby is nu niet beschikbaar.",
-  "NoRoleClaimForUser": "Autorisatie-gegevens niet gevonden.",
-  "UnauthorizedRole": "U bent hier niet voor geautoriseerd.",
-  "TeamAlreadyLoggedIn": "U bent als team al ingelogd.",
-  "ValidationError": "Er is een validatiefout opgetreden.",
-  "GameIsPausedOrFinished": "Het spel is gepauseerd of afgelopen. De actie die je probeert uit te voeren mag nu niet.",
-  "ThatsYou": "Hallo!",
   "LoggedOut": "U bent uitgelogd.",
-  "TeamCantAccessQuizItemOtherThanTheCurrent": "U mag alleen het huidige item zien.",
-  "SET_OUTCOME_CORRECT": "Antwoord goedkeuren",
-  "SET_OUTCOME_INCORRECT": "Antwoord afkeuren",
-  "NUMBER_OF_CONNECTIONS": "Aantal verbindingen",
-  "BEAMER_TITLE": "Open het beamerscherm",
-  "CONFIRM_END_GAME": "Weet je zeker dat je het spel wilt beëindigen?",
-  "PLEASE_CONFIRM": "Bevestigen",
-  "YES": "Ja",
-  "NO": "Nee",
-  "THE_GAME_IS_PAUSED": "Het spel is gepauzeerd",
-  "WAIT_FOR_RESUME": "Wacht tot het spel hervat wordt",
-  "EDIT": "Bewerken",
-  "CHANGES_SAVED": "Antwoord(en) automatisch opgeslagen.",
-  "REVIEWING": "Antwoorden",
-  "REVIEW_CURRENT_SECTION": "Antwoordmodus",
-  "OPEN_GAME": "Open",
-  "ADD_GAME_FOR_QUIZ": "Spel toevoegen",
+  "MEMBERS": "Teamleden",
+  "MEMBER_NAMES": "Geef hier de namen van je teamleden op (één per regel).",
+  "MENU_ABOUT": "Over",
+  "MENU_HELP": "Help",
   "MY_GAMES": "Mijn spellen",
   "MY_QUIZZES": "Mijn quizzen",
-  "UPLOAD_QUIZ": "Quiz uploaden",
-  "ADD_QUIZ": "Quiz toevoegen",
-  "EDIT_GAME": "Spel bewerken",
-  "DELETE_GAME": "Spel verwijderen",
-  "TEAM_OFFLINE": "Team is offline",
+  "NEXT_ITEM": "Volgende vraag",
+  "NO": "Nee",
+  "NUMBER_OF_CONNECTIONS": "Aantal verbindingen",
+  "NoRoleClaimForUser": "Autorisatie-gegevens niet gevonden.",
+  "OF": "van",
+  "OPEN_GAME": "Open",
   "OTHER_GAMES": "Andere spellen",
-  "FLAGGED": "Handmatig nakijken nodig"
+  "Ok": "Ok",
+  "Open": "Open",
+  "PASSWORD": "Wachtwoord",
+  "PASSWORD_LENGTH": "Een wachtwoord is minimaal 2 tekens.",
+  "PAUSE_GAME": "Pauzeren",
+  "PLEASE_CONFIRM": "Bevestigen",
+  "POINTS": "p",
+  "PREVIOUS_ITEM": "Vorige vraag",
+  "Paused": "Gepauzeerd",
+  "QUIZMASTER_LOGIN": "Quizmaster / admin login",
+  "QUIZ_ITEM": "Vraag",
+  "QuestionNotInCurrentQuizSection": "Onbekende vraag voor huidige quiz sectie.",
+  "QuestionNotInQuiz": "Onbekende vraag voor deze quiz.",
+  "QuizMasterUnauthorizedForGame": "U bent hiervoor niet geautoriseerd (game).",
+  "QuizMasterUnauthorizedForQuizItem": "U bent hiervoor niet geautoriseerd (quiz item).",
+  "REGISTER": "Aanmelden",
+  "REGISTER_TEAM": "Team aanmelden",
+  "REMOVED": "Verwijderd",
+  "RESUME_GAME": "Hervatten",
+  "REVIEWING": "Antwoorden",
+  "REVIEW_CURRENT_SECTION": "Antwoordmodus",
+  "Running": "Bezig",
+  "SAVE": "Opslaan",
+  "SECTION": "onderdeel",
+  "SELECT_GAME": "Spel actief maken",
+  "SET_OUTCOME_CORRECT": "Antwoord goedkeuren",
+  "SET_OUTCOME_INCORRECT": "Antwoord afkeuren",
+  "SKIP_10_BACK": "10",
+  "SKIP_10_FORWARD": "10",
+  "START_GAME": "Spel starten",
+  "TEAMLOBBY_SIT_BACK": "Zodra iedereen er klaar voor is, wordt je automatisch doorgestuurd naar het spelscherm. Tot die tijd kun je hier je teamnaam aanpassen en je teamleden invullen. Je wijzigingen worden automatisch opgeslagen!",
+  "TEAMLOBBY_WELCOME": "Welkom in de lobby!",
+  "TEAMNAME": "Teamnaam",
+  "TEAMNAME_LENGTH": "Een teamnaam van minimaal 5 en maximaal 30 karakters is verplicht.",
+  "TEAM_KICKED_OUT": "Team '{teamName}' uit het spel verwijderd.",
+  "TEAM_MEMBERS_HERE": "Nog geen teamleden ingevuld.",
+  "TEAM_OFFLINE": "Team is offline",
+  "THE_GAME_IS_PAUSED": "Het spel is gepauzeerd",
+  "TOTAL_NUMBER_OF_POINTS": "Totaal aantal punten",
+  "TeamAlreadyLoggedIn": "U bent als team al ingelogd.",
+  "TeamCantAccessQuizItemOtherThanTheCurrent": "U mag alleen het huidige item zien.",
+  "TeamNameIsTaken": "Teamnaam is al in gebruik.",
+  "ThatsYou": "Hallo!",
+  "UPLOAD_QUIZ": "Quiz uploaden",
+  "USERNAME": "Gebruikersnaam",
+  "USERNAME_LENGTH": "Een gebruikersnaam van minimaal 5 en maximaal 30 karakters is verplicht.",
+  "UnauthorizedRole": "U bent hier niet voor geautoriseerd.",
+  "ValidationError": "Er is een validatiefout opgetreden.",
+  "WAIT_FOR_RESUME": "Wacht tot het spel hervat wordt",
+  "WELCOME_TO_QUIZMASTER_LOBBY": "Welkom in de lobby",
+  "YES": "Ja",
+  "YOUR_TEAM": "Jouw team"
 }
