removed Deleted GameState * QM lobby viewmodel now contains quizzes and games * gameCreated message * some message to user (qm) instead of gameId group *

--- a/team-frontend/src/locales/en.json
+++ b/team-frontend/src/locales/en.json
@@ -12,6 +12,7 @@
   "COMPETING_TEAMS": "Other teams in the game",
   "CONFIRM_END_GAME": "Are you sure you want to end the game?",
   "CONTINUE_GAME": "To the game screen.",
+  "CURRENT_GAME": "Current game",
   "CURRENT_TEAMS_IN_GAME": "Teams in the game:",
   "CURRENT_TEAMS_IN_LOBBY": "The following teams are waiting in the lobby:",
   "Closed": "Closed",
