--- a/team-frontend/src/locales/nl.json
+++ b/team-frontend/src/locales/nl.json
@@ -12,8 +12,9 @@
   "COMPETING_TEAMS": "Andere teams in het spel",
   "CONFIRM_END_GAME": "Weet je zeker dat je het spel wilt beëindigen?",
   "CONTINUE_GAME": "Naar het spelscherm",
+  "CURRENT_GAME": "Huidige spel",
   "CURRENT_TEAMS_IN_GAME": "De volgende teams zitten in het spel:",
-  "CURRENT_TEAMS_IN_LOBBY": "De volgende teams zitten in de teamlobby:",
+  "CURRENT_TEAMS_IN_LOBBY": "Teams in het spel",
   "Closed": "Gesloten",
   "DELETE_GAME": "Spel verwijderen",
   "Deleted": "Verwijderd",
