missing strings in locales

--- a/team-frontend/src/locales/en.json
+++ b/team-frontend/src/locales/en.json
@@ -26,12 +26,14 @@
   "Finished": "Finished",
   "GAME": "game",
   "GAMES": "games",
+  "GAMETITLE_FEEDBACK": "The game title should be at least 5 characters.",
   "GameIsPausedOrFinished": "The game is paused or finished. The thing you're trying to do is not allowed in these states.",
   "HOME_NAVTITLE": "Welcome",
   "HOME_QUIZMASTERLOGIN": "Quizmaster login",
   "HOME_REGISTERHERE": "Register here",
   "HOME_TITLE": "To the homepage",
   "HOME_WELCOME": "Welcome to Quizr!",
+  "INVITECODE_FEEDBACK": "The invite code should be at least 5 characters.",
   "InvalidCode": "Invalid code",
   "InvalidEntityId": "Invalid id.",
   "InvalidGameStateTransition": "Invalid game status transition.",
@@ -78,6 +80,7 @@
   "REMOVED": "Removed",
   "RESUME_GAME": "Resume",
   "REVIEWING": "Reviewing",
+  "Reviewing": "Reviewing",
   "REVIEW_CURRENT_SECTION": "Review section",
   "Running": "Busy",
   "SAVE": "Save",
