--- a/team-frontend/src/locales/nl.json
+++ b/team-frontend/src/locales/nl.json
@@ -26,12 +26,14 @@
   "Finished": "Afgelopen",
   "GAME": "spel",
   "GAMES": "spellen",
+  "GAMETITLE_FEEDBACK": "De titel van het spel moet minsters 5 tekens zijn.",
   "GameIsPausedOrFinished": "Het spel is gepauseerd of afgelopen. De actie die je probeert uit te voeren mag nu niet.",
   "HOME_NAVTITLE": "Welkom",
   "HOME_QUIZMASTERLOGIN": "Quizmaster login",
   "HOME_REGISTERHERE": "Registreer hier",
   "HOME_TITLE": "Naar de voorpagina",
   "HOME_WELCOME": "Welkom bij Quizr!",
+  "INVITECODE_FEEDBACK": "De code van het spel moet minsters 5 tekens zijn.",
   "InvalidCode": "Ongeldige code",
   "InvalidEntityId": "Ongeldige id.",
   "InvalidGameStateTransition": "Ongeldige transitie van spelstatus.",
@@ -78,6 +80,7 @@
   "REMOVED": "Verwijderd",
   "RESUME_GAME": "Hervatten",
   "REVIEWING": "Antwoorden",
+  "Reviewing": "Antwoorden",
   "REVIEW_CURRENT_SECTION": "Antwoordmodus",
   "Running": "Bezig",
   "SAVE": "Opslaan",
